--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,7 +9,7 @@ android {
     buildToolsVersion "29.0.3"
 
     defaultConfig {
-        applicationId "com.mbarra.whatsappclone"
+        applicationId "idn.project_whatsapp.whatsapp"
         minSdkVersion 21
         targetSdkVersion 29
         versionCode 1
@@ -24,6 +24,11 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+
+    androidExtensions {
+        experimental = true
+    }
+
 }
 
 dependencies {
